--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "cross-env": "5.2.0",
     "express": "4.16.4",
     "fontfaceobserver": "2.1.0",
+    "formik": "^2.1.4",
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
     "immer": "3.0.0",
@@ -90,7 +91,8 @@
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
-    "styled-components": "4.2.0"
+    "styled-components": "4.2.0",
+    "yup": "^0.28.3"
   },
   "devDependencies": {
     "@babel/cli": "7.4.3",
