--- a/package.json
+++ b/package.json
@@ -65,10 +65,12 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
+    "@material-ui/core": "^4.9.11",
     "chalk": "^2.4.2",
     "compression": "1.7.4",
     "connected-react-router": "6.4.0",
     "cross-env": "5.2.0",
+    "dayjs": "^1.8.24",
     "express": "4.16.4",
     "fontfaceobserver": "2.1.0",
     "formik": "^2.1.4",
