--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-number-format": "^4.4.1",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
+    "react-text-mask": "^5.4.3",
     "redux": "4.0.1",
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
