--- a/package.json
+++ b/package.json
@@ -65,16 +65,16 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
-    "@material-ui/core": "^4.9.11",
-    "@material-ui/icons": "^4.9.1",
-    "chalk": "^2.4.2",
+    "@material-ui/core": "4.9.11",
+    "@material-ui/icons": "4.9.1",
+    "chalk": "2.4.2",
     "compression": "1.7.4",
     "connected-react-router": "6.4.0",
     "cross-env": "5.2.0",
-    "dayjs": "^1.8.24",
+    "dayjs": "1.8.24",
     "express": "4.16.4",
     "fontfaceobserver": "2.1.0",
-    "formik": "^2.1.4",
+    "formik": "2.1.4",
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
     "immer": "3.0.0",
@@ -88,16 +88,16 @@
     "react-dom": "16.8.6",
     "react-helmet": "6.0.0-beta",
     "react-intl": "2.8.0",
-    "react-number-format": "^4.4.1",
+    "react-number-format": "4.4.1",
     "react-redux": "7.0.2",
     "react-router-dom": "5.1.2",
-    "react-text-mask": "^5.4.3",
+    "react-text-mask": "5.4.3",
     "redux": "4.0.1",
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
     "styled-components": "4.2.0",
-    "yup": "^0.28.3"
+    "yup": "0.28.3"
   },
   "devDependencies": {
     "@babel/cli": "7.4.3",
@@ -155,7 +155,7 @@
     "react-test-renderer": "16.8.6",
     "react-testing-library": "6.1.2",
     "rimraf": "2.6.3",
-    "shelljs": "^0.8.3",
+    "shelljs": "0.8.3",
     "style-loader": "0.23.1",
     "stylelint": "10.0.1",
     "stylelint-config-recommended": "2.2.0",
