--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
+    "@formatjs/intl-pluralrules": "3.0.1",
+    "@formatjs/intl-relativetimeformat": "6.0.1",
     "@material-ui/core": "4.9.11",
     "@material-ui/icons": "4.9.1",
     "chalk": "2.4.2",
@@ -87,7 +89,7 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-helmet": "6.0.0-beta",
-    "react-intl": "2.8.0",
+    "react-intl": "5.0.1",
     "react-number-format": "4.4.1",
     "react-redux": "7.0.2",
     "react-router-dom": "5.1.2",
